--- a/www/drupal8/Makefile
+++ b/www/drupal8/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.1 2017/11/04 14:30:39 wen Exp $
+# $NetBSD: Makefile,v 1.1.2.1 2018/03/02 21:23:28 spz Exp $
 
-DISTNAME=	drupal-8.4.2
+DISTNAME=	drupal-8.4.5
 PKGNAME=	${PHP_PKG_PREFIX}-${DISTNAME}
 CATEGORIES=	www
 MASTER_SITES=	http://ftp.drupal.org/files/projects/
