--- a/mail/dovecot2-sqlite/Makefile
+++ b/mail/dovecot2-sqlite/Makefile
@@ -1,6 +1,5 @@
-# $NetBSD: Makefile,v 1.9 2017/11/30 16:45:29 adam Exp $
+# $NetBSD: Makefile,v 1.9.2.1 2018/03/02 21:24:18 spz Exp $
 
-PKGREVISION= 1
 .include "../../mail/dovecot2/Makefile.plugin"
 
 PKGNAME=		${DISTNAME:S/dovecot/dovecot-sqlite/}
