--- a/mail/dovecot2/Makefile.common
+++ b/mail/dovecot2/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.15 2017/10/22 07:07:34 adam Exp $
+# $NetBSD: Makefile.common,v 1.15.2.1 2018/03/02 21:24:18 spz Exp $
 #
 # when updating to a new release, update ABI depends in
 # the buildlink3.mk file as well, since the plugins' version
@@ -7,7 +7,7 @@
 # used by mail/dovecot2/Makefile
 # used by mail/dovecot2/Makefile.plugin
 
-DISTNAME=	dovecot-2.2.33.2
+DISTNAME=	dovecot-2.3.0.1
 CATEGORIES=	mail
 MASTER_SITES=	https://www.dovecot.org/releases/${PKGVERSION_NOREV:R:R}/
 
@@ -30,6 +30,9 @@ CONFIGURE_ARGS+=	--sysconfdir=${PKG_SYSCONFDIR}
 CONFIGURE_ARGS+=	--with-ssldir=${SSLDIR}
 CONFIGURE_ARGS+=	--without-gssapi
 CONFIGURE_ARGS+=	--without-ldap
+
+# Leave pkgsrc to enable compiler security features as appropriate.
+CONFIGURE_ARGS+=	--disable-hardening
 
 # Enable generic SQL backend support
 CONFIGURE_ARGS+=	--with-sql
