--- a/lang/php56/Makefile
+++ b/lang/php56/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.15 2017/10/27 08:45:06 taca Exp $
+# $NetBSD: Makefile,v 1.15.2.1 2018/03/03 09:23:30 spz Exp $
 
 #
 # We can't omit PKGNAME here to handle PKG_OPTIONS.
@@ -45,12 +45,6 @@ INSTALLATION_DIRS+=	${CGIDIR} ${PHP_EXTENSION_DIR} ${EGDIR} share/php
 # and lacks the zone memory allocator
 .if !empty(MACHINE_PLATFORM:MDarwin-[0-8].*-*)
 CFLAGS+=	-DSQLITE_ENABLE_LOCKING_STYLE=0 -DSQLITE_WITHOUT_ZONEMALLOC
-.endif
-
-.include "../../mk/compiler.mk"
-
-.if ${OPSYS} == "SunOS" && ${PKGSRC_COMPILER} == "clang"
-CONFIGURE_ARGS+=	--disable-libgcc
 .endif
 
 post-install:
